--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ dist/
 *.so
 *.ilk
 *.pdb
+*.dSYM
 bin/
 nsphere
 nsphere.exe
@@ -40,11 +41,6 @@ venv/
 __MACOSX/
 Thumbs.db
 .ipynb_checkpoints/
-
-# Backup/Junk/Markdown (created locally)
-_backup/
-_junk/
-_md/
 
 # IDE specific files
 .vscode/
